@@ -18,7 +18,9 @@ pipeline {
    stage('Stage I: Build') {
       steps {
         echo "Building Jar Component ..."
-        sh "mvn clean package "
+         withEnv(['MAVEN_OPTS=-Xmx2g -XX:MaxPermSize=512m']) { // Adjust memory values as needed
+            sh 'mvn clean package'
+        }
       }
     }
 
